# Spain_Account

./: README.md  README_spain_account.md  pyproject.toml
spain_account/: copy_chart_to_estudia.py  hooks.py  modules.txt
spain_account/fixtures/: hacienda_model.json  tipo_de_amortizacion.json
spain_account/justification/doctype/acciones_bolsa/: acciones_bolsa.js  acciones_bolsa.json  acciones_bolsa.py  test_acciones_bolsa.py
spain_account/justification/doctype/depositos_a_plazo/: depositos_a_plazo.js  depositos_a_plazo.json  depositos_a_plazo.py  test_depositos_a_plazo.py
spain_account/justification/doctype/fondos_de_inversion/: fondos_de_inversion.js  fondos_de_inversion.json  fondos_de_inversion.py  test_fondos_de_inversion.py
spain_account/justification/doctype/gastos_por_sede/: gastos_por_sede.js  gastos_por_sede.json  gastos_por_sede.py  test_gastos_por_sede.py
spain_account/justification/doctype/linea_de_prestamo/: linea_de_prestamo.json  linea_de_prestamo.py
spain_account/justification/doctype/prestamo/: prestamo.js  (+3 more)
spain_account/public/js/: account.js  expense_claim.js  setup_wizard.js
spain_account/spain_accounting/: __init__.py  chart_of_accounts_loader.py  setup_wizard.py
spain_account/spain_accounting/charts/: es_spain__chart_of_accounts_numbers.json
spain_account/spain_accounting/custom/: account.json
spain_account/spain_accounting/py/: account.py  account_level1.json  account_level2.json  account_level_4.json  after_setup.py  charts_of_account_level.py  company.py  employee.py  expense_claim.py  purchase_invoice.py  setup_wizard.py
(+60 files in other folders)
